Make generated class Log4jPlugins reproducible
This updates annotation processing to ensure that the output is written in a deterministic order. This ensures that builds involving plugins can be reproducible.

This fixes #1520.

Signed-off-by: Matt Sicker <mattsicker@apache.org>